<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_order"
        android:title="@string/order"
        app:showAsAction="never">
        <menu>
            <group>
                <item
                    android:id="@+id/it_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:title="@string/title_default_pref_order"
                    app:showAsAction="always" />

                <item
                    android:id="@+id/it_top_rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:title="@string/title_top_rated_pref_order"
                    app:showAsAction="always" />

                <item
                    android:id="@+id/it_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:title="@string/title_favorites_pref_order"
                    app:showAsAction="always" />

            </group>
        </menu>
    </item>
</menu>